--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/outfit": "^5.0.13",
+    "@fontsource/roboto": "^5.0.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
