--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -2,7 +2,7 @@
   {
     "title": "Facebook Ads Analysis",
     "imageSrc": "projects/Project-1.png",
-    "description": "The process includes extracting data from the Facebook Marketing API, cleaning the data with python in a Jupyter Notebook, exporting it to a PostgreSQL database, and creating a Power BI report that updates daily with the new data.",
+    "description": "Developed a comprehensive data pipeline to extract, clean, and analyze Facebook Ads data for an e-commerce brand using Python, Jupyter Notebooks, PostgreSQL and Power Bi.",
     "skills": ["Python", "PostreSQL", "Pandas", "Power Bi"],
     "demo": "https://app.powerbi.com/links/5b7jx7IbjU?ctid=e263325c-d88f-48ba-9656-b318da27689a&pbi_source=linkShare&bookmarkGuid=85ce2879-cf74-40b7-9b29-78fa56f1417e",
     "source": "https://github.com/geovanyrdz/Facebook-Ads-analysis.git"
